<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:id="@+id/viewEntertainment_activity" android:layout_width="match_parent"
        android:layout_height="match_parent">


    <android.support.design.widget.AppBarLayout layout="@layout/app_bar_layout"
                                                android:id="@+id/entertainmentAppBarLayout"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                                                android:fitsSystemWindows="true"
                                                >

        <android.support.design.widget.CollapsingToolbarLayout android:layout_width="match_parent"
                                                               android:layout_height="wrap_content"
                                                               app:layout_scrollFlags="scroll|exitUntilCollapsed"
                                                               app:contentScrim="@color/colorPrimary"
                                                               app:expandedTitleTextAppearance="@android:color/transparent"
                                                               android:fitsSystemWindows="true"
        >
            <ImageView
                    app:srcCompat="@drawable/eventplaceholder"
                    android:contentDescription="@string/image_of_added_area"
                    android:id="@+id/ViewAddedAreaImageView"
                    android:layout_height="365dp"
                    android:layout_width="match_parent"
                    app:layout_collapseMode="parallax"
                    android:scaleType="centerCrop"/>

            <android.support.v7.widget.Toolbar
                    layout="@layout/app_bar_layout"
                    android:id="@+id/ViewAddedAreaToolbar"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_width="match_parent"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" app:layout_collapseMode="pin"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginBottom="16dp"
                                            android:elevation="5dp"
                                            app:cardUseCompatPadding="true" android:id="@+id/cardView1">

            <android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
                                                          android:layout_height="wrap_content"
                                                          android:orientation="vertical">

                <android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
                                                              android:layout_height="wrap_content"
                                                              android:orientation="horizontal"
                                                              android:padding="12dp"
                                                              android:id="@+id/ownerLinearlayout">

                    <ImageView android:layout_width="0dp"
                               android:layout_height="wrap_content"
                               android:contentDescription="@string/entetainment_spot_owner"
                               android:src="@mipmap/ic_owner"
                               android:layout_weight="1" android:id="@+id/authorImageView"/>

                    <TextView
                            android:layout_gravity="center_vertical"
                            android:padding="12dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:layout_weight="9"
                            android:text="@string/francis_tinashe_mudavanhu"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/ViewAddedAreaOwnerText"
                            android:textColor="@color/colorPrimaryText"/>
                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
                                                              android:layout_height="wrap_content"
                                                              android:orientation="horizontal"
                                                              android:padding="12dp">

                    <ImageView
                        android:id="@+id/navigationImageView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/entertainment_spot_address"
                        android:paddingTop="8dp"
                        android:src="@drawable/ic_address" />

                    <TextView
                            android:layout_gravity="center_vertical"
                            android:padding="12dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:layout_weight="9"
                            android:text="@string/fake_address"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/ViewAddedAreaAddressText"
                            android:textColor="@color/colorPrimaryText"/>

                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
                                                              android:layout_height="wrap_content"
                                                              android:orientation="horizontal"
                                                              android:padding="12dp">

                    <ImageView android:layout_width="0dp"
                               android:layout_height="wrap_content"
                               android:contentDescription="@string/entertainment_spot_description"
                               android:src="@mipmap/ic_description"
                               android:layout_weight="1" android:id="@+id/descriptImageView"/>

                    <TextView
                            android:layout_gravity="center_vertical"
                            android:padding="12dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:layout_weight="9"
                            android:text="@string/fake_description"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/ViewAddedAreaDescText"
                            android:textColor="@color/colorPrimaryText"/>

                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
                                                              android:layout_height="wrap_content"
                                                              android:orientation="horizontal"
                                                              android:padding="12dp">

                    <ImageView android:layout_width="0dp"
                               android:layout_height="47dp"
                               android:layout_weight="1"
                               android:id="@+id/averageCostImageView"
                               app:srcCompat="@android:drawable/ic_menu_info_details"
                               tools:ignore="ContentDescription"/>

                    <android.support.v7.widget.LinearLayoutCompat android:layout_width="0dp"
                                                                  android:layout_height="wrap_content"
                                                                  android:padding="12dp"
                                                                  android:layout_weight="9"
                                                                  android:layout_gravity="center_vertical"
                                                                  android:background="@drawable/spinner">

                        <Spinner android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:id="@+id/averageCostSpinner"
                                 android:popupBackground="@color/colorPrimary"
                                 android:entries="@array/cost"
                                 tools:ignore="UnusedAttribute"
                                 android:spinnerMode="dialog"
                                 style="@style/Platform.Widget.AppCompat.Spinner">

                        </Spinner>

                    </android.support.v7.widget.LinearLayoutCompat>

                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                             android:layout_height="wrap_content">

                    <android.support.v7.widget.RecyclerView android:layout_width="0dp"
                                                            android:id="@+id/comment_recyclerView"
                                                            android:scrollbars="vertical"
                                                            android:layout_marginRight="8dp"
                                                            app:layout_constraintRight_toRightOf="parent"
                                                            android:layout_marginLeft="8dp"
                                                            app:layout_constraintLeft_toLeftOf="parent"
                                                            app:layout_constraintTop_toTopOf="parent"
                                                            android:layout_marginTop="8dp"
                                                            app:layout_constraintHorizontal_bias="0.0"
                                                            android:layout_height="200dp">

                    </android.support.v7.widget.RecyclerView>


                </android.support.constraint.ConstraintLayout>

                <android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
                                                              android:layout_height="wrap_content"
                                                              android:padding="12dp"
                                                              android:orientation="horizontal">

                    <EditText android:layout_width="0dp"
                              android:layout_height="wrap_content"
                              android:layout_weight="8"
                              android:padding="12dp" android:inputType="textMultiLine"
                              android:id="@+id/commentEditText"
                              android:hint="@string/write_a_comment"/>

                    <ImageButton android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="2"
                                 app:srcCompat="@android:drawable/ic_menu_send"
                                 android:elevation="0dp" android:tint="@color/colorWhite"
                                 android:scaleType="fitCenter" android:id="@+id/commentImageButton"
                                 android:backgroundTint="@color/colorPrimaryLight" android:contentDescription=""
                                 tools:ignore="ContentDescription"/>

                </android.support.v7.widget.LinearLayoutCompat>

            </android.support.v7.widget.LinearLayoutCompat>
        </android.support.v7.widget.CardView>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content"
                                                        android:id="@+id/likeFloatingActionButton"
                                                        app:elevation="6dp"
                                                        android:src="@drawable/ic_white_fav"
                                                        app:pressedTranslationZ="12dp"
                                                        app:layout_anchor="@id/entertainmentAppBarLayout"
                                                        app:layout_anchorGravity="bottom|right|end"
                                                        android:layout_marginEnd="16dp"

    />
</android.support.design.widget.CoordinatorLayout>