...
                                    xmlns:tools="http://schemas.android.com/tools"
                                    xmlns:android="http://schemas.android.com/apk/res/android"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    app:cardUseCompatPadding="true" android:elevation="5dp"
                                    tools:layout_editor_absoluteY="72dp"
                                    tools:layout_editor_absoluteX="8dp" android:id="@+id/cardView2">

    <android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
                                                  android:orientation="horizontal"
                                                  android:layout_height="match_parent">

        <android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
...
